--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --height: 1687px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,12 +17,38 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+body{
+  @apply text-default;
+}
+
+h1 {
+  @apply text-2xl md:text-4xl;
+}
+
+h2 {
+  @apply text-xl md:text-2xl;
+}
+
+h3 {
+  @apply text-lg md:text-xl;
+}
+
+h4 {
+  @apply text-base md:text-lg;
+}
+
+h5 {
+  @apply text-sm md:text-base;
+}
+
+h6 {
+  @apply text-xs md:text-sm;
+}
+
+.dialog {
+  inset: 0px;
+}
+
+.transform-dialog {
+  transform: translate(-50%, -50%);
 }
